--- a/Develop/package.json
+++ b/Develop/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "cors": "^2.8.5"
   }
 }
